[teamsProperties] added spec and first impl for routes  DELETE api/teamProperties/{teamId}/removeProperty/{key}, PUT teamProperties/{teamId}/updateProperty/{key}
